# OTUS-HW-1

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
include/: lib.hpp
src/: lib.cpp  main.cpp
test/src/: test.cpp
